--- a/style.css
+++ b/style.css
@@ -201,3 +201,23 @@ footer p{
     color: #ffffff;
     padding-bottom: 20px;
 }
+
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.about-paragraph{
+    display: block;
+}
+
+.about-perfil{
+    width: 250px;
+    border-radius: 50%;
+}
+
+.about p{
+    width: 45%;
+}
