--- a/style.css
+++ b/style.css
@@ -109,12 +109,6 @@
     border-radius: 50%;
 }
 
-#formCad{
-    width: 250px;
-    height: auto;
-    margin-left: 0;
-}
-
 @media (max-width:768px){
     .presentation{
         flex-direction: column;
@@ -286,4 +280,21 @@ footer p{
 
 #formCad-caixa{
     background-color: rgb(255, 217, 151);
+}
+
+#formCad{
+    width: 250px;
+    height: auto;
+    margin-left: 0;
+}
+
+#barbearia-caixa{
+    background-color: rgb(61, 61, 61);
+    color: #ffffff;
+}
+
+#barbearia{
+    width: 250px;
+    height: auto;
+    margin-left: 0;
 }
