--- a/style.css
+++ b/style.css
@@ -298,3 +298,13 @@ footer p{
     height: auto;
     margin-left: 0;
 }
+
+#bodysoul-caixa{
+    background-color: #fad8dd;
+}
+
+#bodysoul{
+    width: 250px;
+    height: auto;
+    margin-left: 0;
+}
